--- a/index6.html
+++ b/index6.html
@@ -122,7 +122,7 @@
         <h4>Наши соцсети</h4>
         <ul>
         <li><a href="#">Вконтакте</a></li>
-        <li><a href="#">Телаграмм</a></li>
+        <li><a href="#">Телеграм</a></li>
         </ul>
       </div>
       <div class="col-md-3 footer-ns animated fadeInRight">
