--- a/index6.html
+++ b/index6.html
@@ -97,7 +97,7 @@
       <div class="col-md-3 footer-brand animated fadeInLeft">
         <h2>Кислород</h2>
         <p>В нашем магазине вы найдете то, что Вам нужно. Ведь книги нужны - как кислород</p>
-        <p>© Kuba corp, All rights reserved</p>
+        <p>© Кубанцева Дарья Алексеевна ИКБО-30-21</p>
         </div>
       <div class="col-md-4 footer-nav animated fadeInUp">
         <h4>Контакты</h4>
